default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterEnvVoidedText__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterEnvVoidedText__c</fullName>
    <label>Envelope Voided Chatter Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>