default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterRecipDeliveredText__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterRecipDeliveredText__c</fullName>
    <label>Recipient Delivered Chatter Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>