default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterRecipSigned__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterRecipSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Signed Chatter</label>
    <type>Checkbox</type>
</CustomField>