default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__ChatterUpdatesEnabled__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ChatterUpdatesEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check to show chatter during DocuSign signature workflow.</inlineHelpText>
    <label>Enable Chatter Status Updates</label>
    <type>Checkbox</type>
</CustomField>