default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Contact2eSignDoc01__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Contact2eSignDoc01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact to eSign Document</description>
    <inlineHelpText>Select a Contact from Salesforce to be a DocuSign Recipient/Signer.  Only Contacts with valid email addresses can be used as DocuSign Recipients.</inlineHelpText>
    <label>Contact to eSign Document</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DocuSign Envelope01</relationshipLabel>
    <relationshipName>DocuSign_Envelope01</relationshipName>
    <type>Lookup</type>
</CustomField>