default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Custom_Field_1_Name__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Custom_Field_1_Name__c</fullName>
    <label>Custom Field 1 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>