default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Custom_Field_3__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Custom_Field_3__c</fullName>
    <description>Custom Field to pass data via Envelope</description>
    <inlineHelpText>Custom Field to pass data via Envelope</inlineHelpText>
    <label>Custom Field 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>