default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Custom_Field_3_Value__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Custom_Field_3_Value__c</fullName>
    <label>Custom Field 3 Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>