default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Day_Prior_to_Warn_of_expiration__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Day_Prior_to_Warn_of_expiration__c</fullName>
    <description>An email message to alert recipients that a deadline approaches for completing an envelope. This is sent only to recipients who have not yet completed the envelope.</description>
    <inlineHelpText>Indicate how many days prior to expiration you want an email message to alert recipients that a deadline approaches for completion. This is sent only to recipients who have not yet completed the transaction.</inlineHelpText>
    <label>Warn of expiration in N day(s) prior</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>