default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Days_before_Envelope_is_Expired_Voided__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Days_before_Envelope_is_Expired_Voided__c</fullName>
    <description>Days before Envelope is Expired/Voided</description>
    <inlineHelpText>Indicate the number of days until this transaction is expired.</inlineHelpText>
    <label>Expire/Void Envelope in N day(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>