default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Document_Name__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Document_Name__c</fullName>
    <description>Document Name</description>
    <inlineHelpText>This is a list of PDF Documents located in your Organization's Salesforce "Documents Tab".  In order to send with DocuSign you must add a PDF to any of the folders within your Documents Tab in Salesforce.  To Send with other Formats click "Learn More'.</inlineHelpText>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>