default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__DocumentID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocumentID__c</fullName>
    <defaultValue>"Select Document ID"</defaultValue>
    <description>Document ID</description>
    <inlineHelpText>Document ID</inlineHelpText>
    <label>DocumentID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>