default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__DocuSign_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Email_Message__c</fullName>
    <defaultValue>"SENT TO YOU BY: " &amp; $User.FirstName &amp; " " &amp; $User.LastName &amp; " " &amp; $User.Email &amp; " with the DocuSign Electronic Signature Service" &amp; BR() &amp; BR() &amp; "I am sending you this request for your electronic signature, please review and electronically sign by following the link below. " &amp; BR() &amp; BR() &amp; BR() &amp; "Thank You,  "  &amp; BR() &amp; BR() &amp; $User.FirstName &amp; " " &amp;  $User.LastName &amp; " " &amp; $User.Email</defaultValue>
    <description>DocuSign Email Message</description>
    <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
    <label>DocuSign Email Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>