default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__DocuSign_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Email_Subject__c</fullName>
    <defaultValue>"Documents for your DocuSign Signature"</defaultValue>
    <description>DocuSign Email Subject</description>
    <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
    <label>DocuSign Email Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>