default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__DocuSign_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_Envelope_ID__c</fullName>
    <description>DocuSign Envelope ID</description>
    <inlineHelpText>DocuSign Envelope ID</inlineHelpText>
    <label>DocuSign Envelope ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>