default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Lead2eSignDoc01__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Lead2eSignDoc01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quick Lead to eSign Document</description>
    <inlineHelpText>Quick Lead to eSign Document</inlineHelpText>
    <label>Lead to eSign Document</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DocuSign Envelopes</relationshipLabel>
    <relationshipName>DocuSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>