default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Reminder_Interval__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Reminder_Interval__c</fullName>
    <description>Reminder Interval in Days to remind them
to review and complete the document(s).</description>
    <inlineHelpText>Indicate how many days should pass before the first reminder is sent</inlineHelpText>
    <label>Send Reminder in N day(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>