default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Reminder_Repeat_Interval_in_Days__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Reminder_Repeat_Interval_in_Days__c</fullName>
    <description>Reminder Repeat Interval in Days to remind them
to review and complete the document(s).</description>
    <inlineHelpText>Indicate how often (in days) the reminder should repeat until the transaction is complete.</inlineHelpText>
    <label>Repeat every N day(s) until complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>