default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Sender__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Sender__c</fullName>
    <description>Sender Name</description>
    <formula>CreatedBy.FirstName &amp; " " &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the name of the Salesforce User who created this DocuSign transaction.</inlineHelpText>
    <label>Sender</label>
    <type>Text</type>
</CustomField>