default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Source_Object__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Source_Object__c</fullName>
    <description>Source Object</description>
    <inlineHelpText>Source Object</inlineHelpText>
    <label>Source Object</label>
    <length>18</length>
    <type>Text</type>
</CustomField>