default/objects/dsfs__DocuSign_Envelope__c/fields/dsfs__Source_Object_Parent__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Source_Object_Parent__c</fullName>
    <label>Source_Object_Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>