default/objects/dsfs__DocuSign_Envelope__c/listViews/dsfs__All2.listView-meta.xml
<ListView>
    <fullName>dsfs__All2</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>